--- a/services/webget/start.html
+++ b/services/webget/start.html
@@ -1,4 +1,4 @@
-<head><title>Welcome to Inferno</title></head>
+<head><title>Welcome to TaijiOS</title></head>
 <body bgcolor=#ff5500 link=#000000>
 <font color=#ffffff>
 <br><br>
@@ -6,12 +6,10 @@
 <table bgcolor=#000000>
 <tr>
 <td valign=middle><img src="vnlogo.gif">
-<td valign=middle><img src="inferno.gif">
+<td valign=middle><img src="taijios.gif">
 </table>
 <br><br>
-<h2>brought to you by 
-<a href="http://www.vitanuova.com">
-Vita Nuova
+<h2>TaijiOS
 </a></h2>
 </center>
 </body>
